# mk48-plus

./: entity_admin.md
.github/workflows/: build_run.yml
admin/backend/: Cargo.toml
admin/backend/src/: main.rs
client/src/: entities_data.json  sprites_webgl.json  ui.rs
client/src/ui/: about_dialog.rs  help_dialog.rs  levels_dialog.rs  ships_detail_dialog.rs  ships_dialog.rs  sprites_css.json
common/src/: lib.rs  protocol.rs  transform.rs  warp.rs
common/src/entity/: _type.rs  data.rs
data/: entities.json
entity_admin/: run.sh
entity_admin/backend/: package-lock.json  package.json  tsconfig.json
entity_admin/backend/src/: diff.ts  server.ts  storage.ts  types.ts  validate.ts
entity_admin/data/: entities.json
entity_admin/frontend/: index.html  main.js  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
entity_admin/frontend/src/: App.tsx  api.js  api.ts  style.css
server/: Cargo.toml
server/src/: entity_extension.rs  protocol.rs  world_inbound.rs  world_physics.rs
sprite_sheet_packer/src/: main.rs
