[package]
name = "mk48-admin-backend"
version = "0.1.0"
edition = "2021"
authors = ["mk48 admin"]

[dependencies]
axum = { version = "=0.6.0", features = ["macros"] }
tokio = { version = "=1.23.1", features = ["rt", "rt-multi-thread", "macros", "signal", "sync", "time", "fs", "io-util", "net"] }
serde = { version = "=1.0.152", features = ["derive"] }
serde_json = "=1.0.93"
tracing = "=0.1.35"
tracing-subscriber = { version = "=0.3.15", features = ["fmt", "env-filter"] }
